; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/quota/extr_quota_v2.c_v2r1_is_id.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/quota/extr_quota_v2.c_v2r1_is_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dquot = type { i64, i32, i32 }
%struct.v2r1_disk_dqblk = type { i32 }
%struct.qtree_mem_dqinfo = type { i32 }
%struct.TYPE_2__ = type { %struct.qtree_mem_dqinfo* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.dquot*)* @v2r1_is_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @v2r1_is_id(i8* %0, %struct.dquot* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.dquot*, align 8
  %6 = alloca %struct.v2r1_disk_dqblk*, align 8
  %7 = alloca %struct.qtree_mem_dqinfo*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.dquot* %1, %struct.dquot** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.v2r1_disk_dqblk*
  store %struct.v2r1_disk_dqblk* %9, %struct.v2r1_disk_dqblk** %6, align 8
  %10 = load %struct.dquot*, %struct.dquot** %5, align 8
  %11 = getelementptr inbounds %struct.dquot, %struct.dquot* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.dquot*, %struct.dquot** %5, align 8
  %14 = getelementptr inbounds %struct.dquot, %struct.dquot* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = call %struct.TYPE_2__* @sb_dqinfo(i32 %12, i32 %15)
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load %struct.qtree_mem_dqinfo*, %struct.qtree_mem_dqinfo** %17, align 8
  store %struct.qtree_mem_dqinfo* %18, %struct.qtree_mem_dqinfo** %7, align 8
  %19 = load %struct.qtree_mem_dqinfo*, %struct.qtree_mem_dqinfo** %7, align 8
  %20 = load i8*, i8** %4, align 8
  %21 = call i64 @qtree_entry_unused(%struct.qtree_mem_dqinfo* %19, i8* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %34

24:                                               ; preds = %2
  %25 = load %struct.v2r1_disk_dqblk*, %struct.v2r1_disk_dqblk** %6, align 8
  %26 = getelementptr inbounds %struct.v2r1_disk_dqblk, %struct.v2r1_disk_dqblk* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i64 @le32_to_cpu(i32 %27)
  %29 = load %struct.dquot*, %struct.dquot** %5, align 8
  %30 = getelementptr inbounds %struct.dquot, %struct.dquot* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = icmp eq i64 %28, %31
  %33 = zext i1 %32 to i32
  store i32 %33, i32* %3, align 4
  br label %34

34:                                               ; preds = %24, %23
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local %struct.TYPE_2__* @sb_dqinfo(i32, i32) #1

declare dso_local i64 @qtree_entry_unused(%struct.qtree_mem_dqinfo*, i8*) #1

declare dso_local i64 @le32_to_cpu(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
